--- a/src/Digipolis.Web/project.json
+++ b/src/Digipolis.Web/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "3.1.0-*",
+  "version": "3.1.0-sl-*",
   "description": "Web related tooling.",
   "authors": [ "digipolis.be" ],
   "packOptions": {
