--- a/src/Digipolis.Web/project.json
+++ b/src/Digipolis.Web/project.json
@@ -12,7 +12,6 @@
     "licenseUrl": "http://github.com/digipolisantwerp/web_aspnetcore/LICENSE.txt"
   },
   "dependencies": {
-    "Digipolis.Errors": "3.0.0",
     "Microsoft.AspNetCore.Diagnostics": "1.0.0",
     "Microsoft.AspNetCore.Diagnostics.Abstractions": "1.0.0",
     "Microsoft.AspNetCore.Http.Abstractions": "1.0.0",
@@ -23,7 +22,8 @@
     "Microsoft.Extensions.Options": "1.0.0",
     "NETStandard.Library": "1.6.0",
     "Newtonsoft.Json": "9.0.1",
-    "Swashbuckle.SwaggerGen": "6.0.0-beta902"
+    "Swashbuckle.SwaggerGen": "6.0.0-beta902",
+    "Digipolis.Errors": "4.0.0"
   },
   "frameworks": {
     "netstandard1.6": {
